--- a/index.html
+++ b/index.html
@@ -7,23 +7,19 @@
     <title>Business Skip Hire</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description"
-      content="Book Skip hire services, a multi-step booking process" />
-    <meta name="keywords"
-      content="Business Skip Hire, Waste Management, Booking" />
+    <meta name="description" content="Book Skip hire services, a multi-step booking process" />
+    <meta name="keywords" content="Business Skip Hire, Waste Management, Booking" />
     <meta property="og:title" content="Business Skip Hire" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://book-skip-hire.vercel.app" />
-    <meta property="og:description"
-      content="Book Skip hire services, a multi-step booking process" />
+    <meta property="og:description" content="Book Skip hire services, a multi-step booking process" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
     <meta property="og:image" content="https://book-skip-hire.vercel.app/preview.jpg" />
     <meta property="og:site_name" content="Landy" />
     <meta property="og:url" content="https://book-skip-hire.vercel.app" />
     <meta property="twitter:title" content="Business Skip Hire" />
-    <meta property="twitter:description"
-      content="Book Skip hire services, a multi-step booking process" />
+    <meta property="twitter:description" content="Book Skip hire services, a multi-step booking process" />
     <meta property="twitter:site" content="https://book-skip-hire.vercel.app" />
     <meta name="author" content="Ubong Sunday" />
   </head>
