--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <meta name="keywords" content="Business Skip Hire, Waste Management, Booking" />
     <meta property="og:title" content="Business Skip Hire" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://book-skip-hire.vercel.app" />
+    <meta property="og:url" content="https://remwaste-wheat.vercel.app/" />
     <meta property="og:description" content="Book Skip hire services, a multi-step booking process" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="https://book-skip-hire.vercel.app/preview.jpg" />
+    <meta property="og:image" content="https://remwaste-wheat.vercel.app/preview.jpg" />
     <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://book-skip-hire.vercel.app" />
+    <meta property="og:url" content="https://remwaste-wheat.vercel.app/" />
     <meta property="twitter:title" content="Business Skip Hire" />
     <meta property="twitter:description" content="Book Skip hire services, a multi-step booking process" />
-    <meta property="twitter:site" content="https://book-skip-hire.vercel.app" />
+    <meta property="twitter:site" content="https://remwaste-wheat.vercel.app/" />
     <meta name="author" content="Ubong Sunday" />
   </head>
   <body>
