--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.jpg" />
+    <link rel="icon" type="image/png" href="/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Business Skip Hire</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -15,7 +15,7 @@
     <meta property="og:description" content="Book Skip hire services, a multi-step booking process" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="https://remwaste-wheat.vercel.app/preview.jpg" />
+    <meta property="og:image" content="https://remwaste-wheat.vercel.app/assets/images/logo.png" />
     <meta property="og:site_name" content="Landy" />
     <meta property="og:url" content="https://remwaste-wheat.vercel.app/" />
     <meta property="twitter:title" content="Business Skip Hire" />
