Add:Best SEO Practice to index.html

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/assets/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Business Skip Hire</title>
+    <title>Billia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Book Skip hire services, a multi-step booking process" />
-    <meta name="keywords" content="Business Skip Hire, Waste Management, Booking" />
-    <meta property="og:title" content="Business Skip Hire" />
+    <meta name="description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
+    <meta name="keywords" content="Billia, Fintech, Payments" />
+    <meta property="og:title" content="Billia" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://remwaste-wheat.vercel.app/" />
-    <meta property="og:description" content="Book Skip hire services, a multi-step booking process" />
+    <meta property="og:url" content="https://billia.netlify.app/" />
+    <meta property="og:description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
     <meta name="robots" content="index, follow" />
     <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="https://remwaste-wheat.vercel.app/assets/images/logo.png" />
-    <meta property="og:site_name" content="Landy" />
-    <meta property="og:url" content="https://remwaste-wheat.vercel.app/" />
-    <meta property="twitter:title" content="Business Skip Hire" />
-    <meta property="twitter:description" content="Book Skip hire services, a multi-step booking process" />
-    <meta property="twitter:site" content="https://remwaste-wheat.vercel.app/" />
+    <meta property="og:image" content="https://billia.netlify.app/assets/images/logo.png" />
+    <meta property="og:site_name" content="Billia" />
+    <meta property="og:url" content="https://billia.netlify.app/" />
+    <meta property="twitter:title" content="Billia" />
+    <meta property="twitter:description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
+    <meta property="twitter:site" content="https://billia.netlify.app/" />
     <meta name="author" content="Ubong Sunday" />
   </head>
   <body>
