Add: Technical SEO

--- a/index.html
+++ b/index.html
@@ -3,25 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/assets/images/logo.png" />
+    <link rel="canonical" href="https://billia.com" data-rh="true" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Billia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
-    <meta name="keywords" content="Billia, Fintech, Payments" />
-    <meta property="og:title" content="Billia" />
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://billia.netlify.app/" />
-    <meta property="og:description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
-    <meta name="robots" content="index, follow" />
-    <meta property="og:locale" content="en_EN" />
-    <meta property="og:image" content="https://billia.netlify.app/assets/images/logo.png" />
-    <meta property="og:site_name" content="Billia" />
-    <meta property="og:url" content="https://billia.netlify.app/" />
-    <meta property="twitter:title" content="Billia" />
-    <meta property="twitter:description" content="Billia a fintech web app that ventures in providing payments services and solutions" />
-    <meta property="twitter:site" content="https://billia.netlify.app/" />
-    <meta name="author" content="Ubong Sunday" />
+    <meta
+      name="description"
+      content="Billia a fintech web app that ventures in providing payments services and solutions"
+      data-rh="true"
+    />
+    <meta name="keywords" content="Billia, Fintech, Payments" data-rh="true" />
+    <meta property="og:title" content="Billia" data-rh="true" />
+    <meta property="og:type" content="website" data-rh="true" />
+    <meta property="og:url" content="https://billia.netlify.app/" data-rh="true" />
+    <meta
+      property="og:description"
+      content="Billia a fintech web app that ventures in providing payments services and solutions"
+      data-rh="true"
+    />
+    <meta name="robots" content="index, follow" data-rh="true" />
+    <meta property="og:locale" content="en_EN" data-rh="true" />
+    <meta property="og:image" content="https://billia.netlify.app/assets/images/logo.png" data-rh="true" />
+    <meta property="og:site_name" content="Billia" data-rh="true" />
+    <meta property="twitter:title" content="Billia" data-rh="true" />
+    <meta
+      property="twitter:description"
+      content="Billia a fintech web app that ventures in providing payments services and solutions"
+      data-rh="true"
+    />
+    <meta property="twitter:site" content="https://billia.netlify.app/" data-rh="true" />
+    <meta name="author" content="Ubong Sunday" data-rh="true" />
   </head>
   <body>
     <div id="root"></div>
