add download component & neccessary updates

--- a/index.html
+++ b/index.html
@@ -10,21 +10,23 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Billia a fintech web app that ventures in providing payments services and solutions"
+      content="Pay bills, top up airtime, buy data, and manage your wallet — all in one place. Fast. Secure. Reliable. Join 20,000+ Nigerians making payments smarter every day."
+    />
+    <meta
+      name="keywords"
+      content="billia, payments, bills, airtime, data, wallet, nigeria, secure payments"
       data-rh="true"
     />
-    <meta name="keywords" content="Billia, Fintech, Payments" data-rh="true" />
-    <meta property="og:title" content="Billia" data-rh="true" />
-    <meta property="og:type" content="website" data-rh="true" />
-    <meta property="og:url" content="https://billia.netlify.app/" data-rh="true" />
+    <meta property="og:title" content="Billia - Simplify Every Payment with One Powerful App" data-rh="true" />
     <meta
       property="og:description"
-      content="Billia a fintech web app that ventures in providing payments services and solutions"
+      content="Pay bills, top up airtime, buy data, and manage your wallet — all in one place. Fast. Secure. Reliable."
       data-rh="true"
     />
-    <meta name="robots" content="index, follow" data-rh="true" />
-    <meta property="og:locale" content="en_EN" data-rh="true" />
-    <meta property="og:image" content="https://billia.netlify.app/assets/images/logo.png" data-rh="true" />
+    <meta property="og:type" content="website" data-rh="true" />
+    <meta property="og:url" content="https://billia.netlify.app/" data-rh="true" />
+    <meta property="og:image" content="/assets/images/logo.png" data-rh="true" />
+    <link rel="canonical" href="https://billia.com" data-rh="true" />
     <meta property="og:site_name" content="Billia" data-rh="true" />
     <meta property="twitter:title" content="Billia" data-rh="true" />
     <meta
@@ -34,6 +36,8 @@
     />
     <meta property="twitter:site" content="https://billia.netlify.app/" data-rh="true" />
     <meta name="author" content="Ubong Sunday" data-rh="true" />
+    <meta name="robots" content="index, follow" data-rh="true" />
+    <meta property="og:locale" content="en_EN" data-rh="true" />
   </head>
   <body>
     <div id="root"></div>
